--- a/views/menu.erb
+++ b/views/menu.erb
@@ -8,6 +8,8 @@
     <a href="/rachel"<li>Rachel</li></a>
     <a href="/sandy"><li>Sandy</li></a>
     <a href="/gustavo"><li>Gustavo</li></a>
+    <a href="/daniel"><li>Daniel</li></a>
+  </ul>
     <a href="/baby jesus"><li>Baby Jesus</li></a>
   </ul>
 
